# chess

app/: build.gradle.kts
app/src/androidTest/java/com/vayunmathur/games/chess/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp
app/src/main/java/com/vayunmathur/games/chess/: ChessApi.kt  ChessModel.kt  ChessViewModel.kt  MainActivity.kt  StockfishEngine.kt
app/src/main/java/com/vayunmathur/games/chess/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: chess_bishop_fill1_24px.xml  chess_king_2_fill1_24px.xml  chess_knight_fill1_24px.xml  chess_pawn_fill1_24px.xml  chess_queen_fill1_24px.xml  chess_rook_fill1_24px.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/vayunmathur/games/chess/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt
